# shopify-python-mcp-server

./: README.md  main.py  pyproject.toml  requirements.txt
src/: settings.py  types.py
src/tools/: api_tools.py  graphql_introspection.py  schemas.py  search.py  validation_tools.py
src/utils/: http_client.py  instrumentation.py
src/validations/: __init__.py  graphql_schema.py
